Fixed "days"-localization in German

--- a/FormatterKit/FormatterKit.bundle/de.lproj/FormatterKit.strings
+++ b/FormatterKit/FormatterKit.bundle/de.lproj/FormatterKit.strings
@@ -32,7 +32,7 @@
 "day" = "Tag";
 
 /* Day Unit (Plural) */
-"days" = "Tage";
+"days" = "Tagen";
 
 /* Day Unit (Singular, Abbreviated) */
 "d" = "T.";
